--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.7",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
-    "@angular/forms": "^20.0.0",
+    "@angular/forms": "^20.3.7",
+    "@angular/material": "^20.2.10",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
     "rxjs": "~7.8.0",
