--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,13 +21,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^20.3.7",
-    "@angular/common": "^20.0.0",
+    "@angular/common": "^20.3.15",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
-    "@angular/forms": "^20.3.7",
+    "@angular/forms": "^20.3.15",
     "@angular/material": "^20.2.10",
     "@angular/platform-browser": "^20.0.0",
-    "@angular/router": "^20.0.0",
+    "@angular/router": "^20.3.15",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "rxjs": "~7.8.0",
